Fix arrows in dark mode

--- a/docs/_static/css/custom.css
+++ b/docs/_static/css/custom.css
@@ -39,3 +39,8 @@ body:not([data-theme="light"]) .mermaid svg .edgeLabel {
   color: white !important;
   background-color: #202020 !important;
 }
+
+body:not([data-theme="light"]) .mermaid svg .marker{
+  stroke: white !important;
+  fill: white !important;
+}
